embed forkme image

--- a/lib/redis-stat/server/views/index.erb
+++ b/lib/redis-stat/server/views/index.erb
@@ -100,7 +100,8 @@
     </div>
 
     <a href="https://github.com/junegunn/redis-stat">
-      <img style="position: fixed; top: 0; right: 0; border: 0; z-index: 10000" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
+      <img style="position: fixed; top: 0; right: 0; border: 0; z-index: 10000" src="/forkme.png" alt="Fork me on GitHub">
+    </a>
 
     <div class="modal hide fade" id="fail" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-header">
@@ -117,9 +118,7 @@
 
     <footer class="footer">
       <div class="container">
-        <p>Designed and implemented by <a href="https://github.com/junegunn">Junegunn Choi</a>.</p>
         <p>Powered by <a href="http://twitter.github.com/bootstrap/">Bootstrap</a>, <a href="http://jquery.com/">jQuery</a> and <a href="http://www.jqplot.com/">jqPlot</a>.</p>
-        
       </div>
     </footer>
 
