--- a/lib/redis-stat/server/public/css/site.css
+++ b/lib/redis-stat/server/public/css/site.css
@@ -42,6 +42,10 @@ body {
   font-style: italic;
 }
 
+#info_table.table {
+  margin: 0;
+}
+
 .footer {
   padding: 30px 0;
   margin-top: 30px;
@@ -64,3 +68,12 @@ body {
   margin-right: 10px;
 }
 
+.scrollable {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+  background-color: transparent;
+  overflow: auto;
+}
