--- a/lib/redis-stat/server/views/index.erb
+++ b/lib/redis-stat/server/views/index.erb
@@ -74,31 +74,45 @@
       </div>
 
       <div class="row">
-        <div class="span12 scrollable">
-          <table id="info_table" class="table table-striped table-condensed table-hover">
-            <thead>
-              <tr>
-                <td width="1"></td>
-                <% @hosts.each do |host| %>
-                  <th class="text-info"><%= host %></th>
+        <div class="span12 info-wrapper">
+          <div class="span2">
+            <table class="table table-striped table-condensed">
+              <thead>
+                <tr>
+                  <th>&nbsp;</th>
+                </tr>
+              </thead>
+              <tbody>
+                <% @tab_measures.each do |stat| %>
+                <tr>
+                  <th><%= stat %></th>
+                </tr>
                 <% end %>
-              </tr>
-            </thead>
-            <tbody>
-              <% @tab_measures.each do |stat| %>
-              <tr id="<%= stat %>">
-                <th>
-                  <%= stat %>
-                </th>
-                <% @hosts.each_with_index do |host, idx| %>
-                <td>
-                  <%= @info[stat][idx] %>
-                </td>
+              </tbody>
+            </table>
+          </div>
+          <div class="span10 scrollable">
+            <table class="table table-striped table-condensed">
+              <thead>
+                <tr>
+                  <% @hosts.each do |host| %>
+                    <th class="text-info"><%= host %></th>
+                  <% end %>
+                </tr>
+              </thead>
+              <tbody>
+                <% @tab_measures.each do |stat| %>
+                <tr id="<%= stat %>">
+                  <% @hosts.each_with_index do |host, idx| %>
+                  <td>
+                    <%= @info[stat][idx] %>
+                  </td>
+                  <% end %>
+                </tr>
                 <% end %>
-              </tr>
-              <% end %>
-            </tbody>
-          </table>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
 
