Fix elasticsearch output (#17)
Derivative fields (not from redis, but from redis-stat) were not sent to ES.

--- a/lib/redis-stat/server/views/index.erb
+++ b/lib/redis-stat/server/views/index.erb
@@ -102,7 +102,7 @@
                 <tr id="<%= stat %>">
                   <% @hosts.each do |host| %>
                   <td>
-                    <%= @info[:instances][host][stat] %>
+                    <%= @info[host][stat] %>
                   </td>
                   <% end %>
                 </tr>
