--- a/lib/redis-stat/server/views/index.erb
+++ b/lib/redis-stat/server/views/index.erb
@@ -4,12 +4,15 @@
     <title>redis-stat</title>
     <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="/jqplot/jquery.jqplot.min.css" rel="stylesheet"/>
+    <link href="/select2/select2.css" rel="stylesheet"/>
+    <link href="/select2/select2-bootstrap.css" rel="stylesheet"/>
     <link href="/css/site.css" rel="stylesheet"/>
     <script type="text/javascript" src="/jquery-1.8.2.min.js"></script>
     <script type="text/javascript" src="/jqplot/jquery.jqplot.min.js"></script>
     <script type="text/javascript" src="/jqplot/jqplot.canvasTextRenderer.min.js"></script>
     <script type="text/javascript" src="/jqplot/jqplot.canvasAxisLabelRenderer.min.js"></script>
     <script type="text/javascript" src="/jqplot/jqplot.canvasAxisTickRenderer.min.js"></script>
+    <script type="text/javascript" src="/select2/select2.min.js"></script>
     <script type="text/javascript" src="/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/js/site.js"></script>
   </head>
@@ -18,10 +21,15 @@
       <div class="navbar-inner">
         <div class="container">
           <a class="brand" href="/">redis-stat</a>
-          <% if @selected %>
+          <% if @hosts.length > 1 %>
             <ul class="nav">
               <li>
-              <a href="#"><%= @selected %></a>
+                <select id="hostlist" class="select2 input-default">
+                  <option value="/"<%= ' selected' unless @selected %>>All instances</option>
+                  <% @hosts.each do |host| %>
+                  <option value="/?host=<%= URI.escape host %>"<%= ' selected' if @selected == host %>><%= host %></option>
+                  <% end %>
+                </select>
               </li>
             </ul>
           <% end %>
@@ -100,8 +108,8 @@
               <thead>
                 <tr>
                   <% @hosts.each do |host| %>
-                    <th class="text-info<%= ' selected' if host == @selected %>">
-                      <a href="?host=<%= host %>"><%= host %>
+                    <th class="text-info<%= ' selected' if @selected && host == @selected %>">
+                      <a href="?host=<%= URI.escape host %>"><%= host %>
                     </th>
                   <% end %>
                 </tr>
@@ -146,6 +154,10 @@
           rows:     <%= RedisStat::Server::STAT_TABLE_ROWS %>})
 
         $("#stat_table th a").tooltip()
+        $("#hostlist").select2()
+        $("#hostlist").bind('change', function() {
+          window.location = $(this).val()
+        })
 
         // TODO Check (typeof(EventSource) !== "undefined")
 
