Remove forkme image and update footer

--- a/lib/redis-stat/server/views/index.erb
+++ b/lib/redis-stat/server/views/index.erb
@@ -132,13 +132,15 @@
 
     </div>
 
-    <a href="https://github.com/junegunn/redis-stat">
-      <img style="position: fixed; top: 0; right: 0; border: 0; z-index: 10000" src="/forkme.png" alt="Fork me on GitHub">
-    </a>
-
     <footer class="footer">
       <div class="container">
-        <p>Powered by <a href="http://twitter.github.com/bootstrap/">Bootstrap</a>, <a href="http://jquery.com/">jQuery</a> and <a href="http://www.jqplot.com/">jqPlot</a>.</p>
+        <p>
+          Powered by <a href="http://twitter.github.com/bootstrap/">Bootstrap</a>,
+          <a href="http://jquery.com/">jQuery</a>,
+          <a href="https://github.com/ivaynberg/select2">select2</a>,
+          and <a href="http://www.jqplot.com/">jqPlot</a>.
+          Source code is hosted on <a href="https://github.com/junegunn/redis-stat">GitHub</a>.
+        </p>
       </div>
     </footer>
 
